--- a/AndrApp/app/src/main/res/layout/activity_main.xml
+++ b/AndrApp/app/src/main/res/layout/activity_main.xml
@@ -43,4 +43,27 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_calculator" />
+
+    <Button
+        android:id="@+id/button_get_location"
+        android:layout_width="151dp"
+        android:layout_height="61dp"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="#FF9800"
+        android:text="Получить координаты"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_music_player" />
+
+    <TextView
+        android:id="@+id/text_location"
+        android:layout_width="248dp"
+        android:layout_height="101dp"
+        android:layout_marginTop="36dp"
+        android:text="Координаты: не определены"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_get_location" />
 </androidx.constraintlayout.widget.ConstraintLayout>
