--- a/AndrApp/app/src/main/res/layout/activity_main.xml
+++ b/AndrApp/app/src/main/res/layout/activity_main.xml
@@ -56,14 +56,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_music_player" />
 
+    <Button
+        android:backgroundTint="#FF9800"
+        android:id="@+id/button_server"
+        android:layout_width="313dp"
+        android:layout_height="45dp"
+        android:text="Подключиться к серверу"
+        tools:layout_editor_absoluteX="49dp"
+        tools:layout_editor_absoluteY="395dp" />
+
     <TextView
         android:id="@+id/text_location"
         android:layout_width="248dp"
         android:layout_height="101dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="220dp"
         android:text="Координаты: не определены"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_get_location" />
 </androidx.constraintlayout.widget.ConstraintLayout>
