--- a/AndrApp/app/src/main/res/layout/activity_server.xml
+++ b/AndrApp/app/src/main/res/layout/activity_server.xml
@@ -36,6 +36,13 @@
             android:enabled="false"
             android:layout_marginStart="8dp" />
 
+        <Button
+            android:id="@+id/buttonSendLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Отправить локацию"
+            android:layout_margin="8dp" />
+
     </LinearLayout>
 
     <EditText
